--- a/portfolio.html
+++ b/portfolio.html
@@ -2,16 +2,101 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha256-YLGeXaapI0/5IgZopewRJcFXomhRMlYYjugPLSyNjTY=" crossorigin="anonymous" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Jason's Profile</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha256-YLGeXaapI0/5IgZopewRJcFXomhRMlYYjugPLSyNjTY=" crossorigin="anonymous" />
+  <style>
+    body {
+      background-image: url("images/circuit.png");
+    }
+
+    html,
+    body {
+      height: 100%;
+    }
+  </style>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
+  <main role="main" class="flex-shrink-0">
 
+    <nav class="navbar navbar-light" style="background-color: #ffffff;">
+      <div class="container">
+        <a class="navbar-brand" style="background-color: #4aaaa5; color: #ffffff; padding: 20px; font-size: 50px;"
+          href="#">Jason Blake</a>
+        <div class="navbar-nav" style="flex-direction: row;">
+          <a class="nav-item nav-link" style="border-right: 2px solid #cccccc; padding-right: 10px; padding-left: 10px;"
+            href="index.html">About Me</a>
+          <a class="nav-item nav-link active"
+            style="border-right: 2px solid #cccccc; padding-right: 10px; padding-left: 10px;" href="#">Portfolio<span
+              class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" style="padding-left: 10px;" href="contact.html">Contact Me</a>
+        </div>
+      </div>
+      </div>
+    </nav>
+
+    <div class="container" style="background-color: #ffffff; margin-top: 20px;">
+
+      <div class="row" style="border-bottom: 2px solid #cccccc; padding-bottom: 20px; margin-bottom: 20px;">
+        <h2 style="color: #4aaaa5; font-size: 40px; margin-left: 20px; margin-top: 20px;">
+          Portfolio</h2>
+      </div>
+
+
+      <div class="row">
+
+        <div class="card text-white border-0">
+          <img src="images/Aphex-Twin.jpg" class="card-img float-left img-fluid" alt="Aphex-Twin"
+            style="height: 350px; width: 350px; margin: 20px;">
+          <div class="card-img-overlay" style="margin-top: 300px;">
+            <h3 style="background-color: #4aaaa5; width: 350px; text-align: center;">Aphex Twin</h3>
+          </div>
+        </div>
+        <div class="card text-white border-0">
+          <img src="images/Bridge-To-Nowhere.jpg" class="card-img float-left img-fluid" alt="Bridge-To-Nowhere"
+            style="height: 350px; width: 350px; margin: 20px;">
+          <div class="card-img-overlay" style="margin-top: 300px;">
+            <h3 style="background-color: #4aaaa5; width: 350px; text-align: center;">Bridge To Nowhere</h3>
+          </div>
+        </div>
+        <div class="card text-white border-0">
+          <img src="images/Fear-DCV.jpg" class="card-img float-left img-fluid" alt="Fear-DCV"
+            style="height: 350px; width: 350px; margin: 20px;">
+          <div class="card-img-overlay" style="margin-top: 300px;">
+            <h3 style="background-color: #4aaaa5; width: 350px; text-align: center;">Fear DCV</h3>
+          </div>
+        </div>
+        <div class="card text-white border-0">
+          <img src="images/Third-Eye-Tears-Of-Joy.jpg" class="card-img float-left img-fluid"
+            alt="Third-Eye-Tears-Of-Joy" style="height: 350px; width: 350px; margin: 20px;">
+          <div class="card-img-overlay" style="margin-top: 300px;">
+            <h3 style="background-color: #4aaaa5; width: 350px; text-align: center;">Third Eye Tears Of Joy</h3>
+          </div>
+        </div>
+        <div class="card text-white border-0">
+          <img src="images/LA-Skyline.jpg" class="card-img float-left img-fluid" alt="LA-Skyline"
+            style="height: 350px; width: 350px; margin: 20px;">
+          <div class="card-img-overlay" style="margin-top: 300px;">
+            <h3 style="background-color: #4aaaa5; width: 350px; text-align: center;">LA Skyline</h3>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </main>
+
+  <footer class="footer mt-auto py-2"
+    style=" background-color: #cccccc; border-top: 8px solid #4aaaa5; text-align: center;">
+    <div class="container">
+      <span>&copy;copywrite</span>
+    </div>
+  </footer>
 </body>
 
 </html>
