--- a/index.html
+++ b/index.html
@@ -21,57 +21,60 @@
 </head>
 
 <body class="d-flex flex-column h-100">
+    <main role="main" class="flex-shrink-0">
 
-    <nav class="navbar navbar-light" style="background-color: #ffffff;">
-        <div class="container">
-            <a class="navbar-brand" style="background-color: #4aaaa5; color: #ffffff; padding: 20px; font-size: 50px;"
-                href="#">Jason
-                Blake</a>
-            <div class="navbar-nav" style="flex-direction: row;">
-                <a class="nav-item nav-link active"
-                    style="border-right: 2px solid #cccccc; padding-right: 10px; padding-left: 10px;" href="#">About
-                    Me<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link"
-                    style="border-right: 2px solid #cccccc; padding-right: 10px; padding-left: 10px;"
-                    href="portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link" style="padding-left: 10px;" href="contact.html">Contact Me</a>
+        <nav class="navbar navbar-light" style="background-color: #ffffff;">
+            <div class="container">
+                <a class="navbar-brand"
+                    style="background-color: #4aaaa5; color: #ffffff; padding: 20px; font-size: 50px;" href="#">Jason
+                    Blake</a>
+                <div class="navbar-nav" style="flex-direction: row;">
+                    <a class="nav-item nav-link active"
+                        style="border-right: 2px solid #cccccc; padding-right: 10px; padding-left: 10px;" href="#">About
+                        Me<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link"
+                        style="border-right: 2px solid #cccccc; padding-right: 10px; padding-left: 10px;"
+                        href="portfolio.html">Portfolio</a>
+                    <a class="nav-item nav-link" style="padding-left: 10px;" href="contact.html">Contact Me</a>
+                </div>
             </div>
+        </nav>
+
+        <div class="container" style="background-color: #ffffff; margin-top: 20px;">
+
+            <div class="row" style="border-bottom: 2px solid #cccccc; padding-bottom: 20px; margin-bottom: 20px;">
+                <h2 style="color: #4aaaa5; font-size: 40px; margin-left: 20px; margin-top: 20px;">
+                    About Me</h2>
+            </div>
+
+            <div class="container">
+                <img src="images/profile-pic.jpg" class="rounded float-left img-fluid" alt="profile-pic"
+                    style="margin: 20px; height: 250px; width: 250px;">
+            </div>
+
+            <p style="line-height: 32px;">
+                Hello! My name is Jason Blake. I have nearly 20 years experience in the food &
+                beverage/hospitality industry (Over 11 years in family owned pizzerias. Also over
+                7 years in a multi-million dollar dining cruise corporation, 3 of those as the
+                Food & Beverage manger of one of their many locations). I'm currently a driver
+                with Uber while attending the coding bootcamp at UCI.
+            </p>
+            <br>
+            <p style="line-height: 32px;">
+                In my free time I enjoy art, music and the outdoors. A few of my favorite genres
+                of music are techno, house and breakbeat. Psychedelic and Graffiti art are very
+                interesting to me because of their vibrancy and multitude of styles. Hiking in the
+                Angeles National Forrest is my prefered way to decompress from the hustle and bustle
+                of life in a big city.
+            </p>
+            <br>
+            <p style="line-height: 32px;">
+                I hope this gives some insight about me. Feel free to ask me any questions or to just chat it up.
+            </p>
+
         </div>
-    </nav>
 
-    <div class="container" style="background-color: #ffffff; margin-top: 20px;">
-
-        <div class="row" style="border-bottom: 2px solid #cccccc; padding-bottom: 20px; margin-bottom: 20px;">
-            <h2 style="color: #4aaaa5; font-size: 40px; margin-left: 20px; margin-top: 20px;">
-                About Me</h2>
-        </div>
-
-        <div class="container">
-            <img src="images/profile-pic.jpg" class="rounded float-left img-fluid" alt="profile-pic"
-                style="margin: 20px; height: 250px; width: 250px;">
-        </div>
-
-        <p style="line-height: 32px;">
-            Hello! My name is Jason Blake. I have nearly 20 years experience in the food &
-            beverage/hospitality industry (Over 11 years in family owned pizzerias. Also over
-            7 years in a multi-million dollar dining cruise corporation, 3 of those as the
-            Food & Beverage manger of one of their many locations). I'm currently a driver
-            with Uber while attending the coding bootcamp at UCI.
-        </p>
-        <br>
-        <p style="line-height: 32px;">
-            In my free time I enjoy art, music and the outdoors. A few of my favorite genres
-            of music are techno, house and breakbeat. Psychedelic and Graffiti art are very
-            interesting to me because of their vibrancy and multitude of styles. Hiking in the
-            Angeles National Forrest is my prefered way to decompress from the hustle and bustle
-            of life in a big city.
-        </p>
-        <br>
-        <p style="line-height: 32px;">
-            I hope this gives some insight about me. Feel free to ask me any questions or to just chat it up.
-        </p>
-
-    </div>
+    </main>
 
     <footer class="footer mt-auto py-2"
         style=" background-color: #cccccc; border-top: 8px solid #4aaaa5; text-align: center;">
@@ -79,6 +82,7 @@
             <span>&copy;copywrite</span>
         </div>
     </footer>
+
 </body>
 
 </html>
