--- a/contact.html
+++ b/contact.html
@@ -8,64 +8,71 @@
     <title>Jason's Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha256-YLGeXaapI0/5IgZopewRJcFXomhRMlYYjugPLSyNjTY=" crossorigin="anonymous" />
-    <style>
-        body {
-            background-image: url("images/circuit.png");
-        }
-
-        html,
-        body {
-            height: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body class="d-flex flex-column h-100">
     <main role="main" class="flex-shrink-0">
 
-        <nav class="navbar navbar-light" style="background-color: #ffffff;">
+        <nav class="navbar navbar-light header">
             <div class="container">
-                <a class="navbar-brand"
-                    style="background-color: #4aaaa5; color: #ffffff; padding: 20px; font-size: 50px;" href="#">Jason
-                    Blake</a>
-                <div class="navbar-nav" style="flex-direction: row;">
-                    <a class="nav-item nav-link"
-                        style="border-right: 2px solid #cccccc; padding-right: 10px; padding-left: 10px;"
-                        href="index.html">About Me</a>
-                    <a class="nav-item nav-link"
-                        style="border-right: 2px solid #cccccc; padding-right: 10px; padding-left: 10px;"
-                        href="portfolio.html">Portfolio</a>
-                    <a class="nav-item nav-link active" style="padding-left: 10px;" href="#">Contact Me<span
-                            class="sr-only">(current)</span></a>
+                <a class="navbar-brand" href="#">
+                    <h1 class="myName">Jason Blake</h1>
+                </a>
+                <div class="navbar-nav">
+                    <ul class="nav">
+                        <li>
+                            <a class="nav-item nav-link" href="index.html">About Me</a>
+                        </li>
+                        <li>
+                            <a class="nav-item nav-link" href="#"> | </a>
+                        </li>
+                        <li>
+                            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li>
+                            <a class="nav-item nav-link" href="#"> | </a>
+                        </li>
+                        <li>
+                            <a class="nav-item nav-link active" href="#">Contact Me</a>
+                        </li>
+                    </ul>
+
                 </div>
-            </div>
             </div>
         </nav>
 
-        <div class="container" style="background-color: #ffffff; margin-top: 20px;">
+        <div class="container">
 
-            <div class="row" style="border-bottom: 2px solid #cccccc; padding-bottom: 20px; margin-bottom: 20px;">
-                <h2 style="color: #4aaaa5; font-size: 40px; margin-left: 20px; margin-top: 20px;">
-                    Contact Me</h2>
+            <div class="row">
+                <div class="col-8">
+
+                    <div class="row contentHeader">
+                        <h2> Contact Me</h2>
+                    </div>
+
+                    <div class="row myContent">
+
+                        <form class="contactMe">
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Name</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="John Smith">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Email address</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="name@example.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Message</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary submit">Submit</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-
-            <form>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Name</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1"
-                        placeholder="name@example.com">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary" style="background-color: #4aaaa5;">Submit</button>
-            </form>
-
         </div>
 
     </main>
